# backtest-system

./: .env.example  .gitignore  AGENT_PROMPT.md  ATR_EXIT_FINAL_REPORT.md  ATR_VS_FIXED_EXIT_COMPARISON.md  CLAUDE.md  CLAUDE.md.bak  EXCLUDED_SYMBOLS_ANALYSIS.md  OOS_ANALYSIS_SUMMARY.md  OOS_DETAILED_TABLES.md  PORTFOLIO_OPTIMIZATION.md  README.md  TRADE_DETAILS_ANALYSIS.md  WFA_LATEST_DETAILED_ANALYSIS.md  analyze_all_wfa.py  analyze_atr_exit.py  analyze_dt_exit.py  analyze_failure_cause.py  analyze_fixed_exit.py  analyze_oos_results.py  analyze_oos_results_v2.py  analyze_results.py  analyze_symbol_comparison.py  analyze_wfa_batch.py  debug_roc.py  pyproject.toml  run.command  test_bb_squeeze.py  test_configs_generation.py  test_donchian.py  test_donchian_detailed.py  test_donchian_synthetic.py  test_tsmom.py
.claude/: codex_review_prompt.md  settings.json
analysis/: __init__.py  trend.py
config/: settings.py
data/: CLAUDE.md  base.py  binance_loader.py  cache.py  csv_loader.py  exchange_fetcher.py  timeframe.py
docs/: agent_orchestration.md  backtesting_principles.md  conversation_log.txt  improvements.md  requirements_definition.md  requirements_gathering.md  system_guide.md  user_guide.md
engine/: backtest.py  numba_loop.py  portfolio.py  position.py
indicators/: CLAUDE.md  adx.py  base.py  candle_pattern.py  momentum.py  registry.py  structure.py  trend.py  volatility.py  volume.py
metrics/: calculator.py
optimizer/: CLAUDE.md  __init__.py  adaptive.py  blacklist.py  cross_validation.py  exit_profiles.py  genetic.py  grid.py  regime_switching.py  (+5 more)
(+145 files in other folders)
